# MarTech-RAG-Generator

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/: mock_ad_data.csv
docs/: design.md
src/: main.py
src/api/: __init__.py  routes.py  schemas.py
src/core/: __init__.py  config.py
src/rag/: __init__.py  engine.py  indexer.py
src/worker/: __init__.py  celery_app.py
