[project]
name = "martech-rag-generator"
version = "0.1.0"
description = ""
authors = [
    {name = "Alanliang666",email = "95164876+Alanliang666@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn[standard] (>=0.46.0,<0.47.0)",
    "pydantic (>=2.13.3,<3.0.0)",
    "llama-index (>=0.14.21,<0.15.0)",
    "llama-index-llms-openai (>=0.7.5,<0.8.0)",
    "llama-index-embeddings-openai (>=0.6.0,<0.7.0)",
    "llama-index-vector-stores-chroma (>=0.5.5,<0.6.0)",
    "chromadb (>=1.5.8,<2.0.0)",
    "celery (>=5.6.3,<6.0.0)",
    "redis (>=7.4.0,<8.0.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
